--- a/Test/WebApi.Test/WebApi.Test.csproj
+++ b/Test/WebApi.Test/WebApi.Test.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Source\Api.Handler\Api.Handler.csproj" />
     <ProjectReference Include="..\..\Source\WebApi\WebApi.csproj" />
   </ItemGroup>
 
