--- a/Source/WebApi/appsettings.json
+++ b/Source/WebApi/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
+  "JWT": {
+    "key": "SuperOmegaSecretKeyEver",
+    "issuer": "http://www.domainname.com",
+    "audience": "http://www.domainname.com"
+  },
   "AllowedHosts": "*"
 }
