Fix and add new Tagirator

--- a/Source/WebApi.Tagirator/WebApi.Tagirator.csproj
+++ b/Source/WebApi.Tagirator/WebApi.Tagirator.csproj
@@ -11,6 +11,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebApi.EF\WebApi.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
