--- a/Source/WebApi/WebApi.csproj
+++ b/Source/WebApi/WebApi.csproj
@@ -16,6 +16,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WebApi.EF\WebApi.EF.csproj" />
+    <ProjectReference Include="..\WebApi.Tagirator\WebApi.Tagirator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Castle.Core">
       <HintPath>..\..\..\..\..\..\.nuget\packages\castle.core\4.3.1\lib\netstandard1.5\Castle.Core.dll</HintPath>
     </Reference>
