--- a/Source/WebApi.Tools/WebApi.Tools.csproj
+++ b/Source/WebApi.Tools/WebApi.Tools.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyName>WebApi.Tagirator</AssemblyName>
-    <RootNamespace>WebApi.Tagirator</RootNamespace>
+    <AssemblyName>WebApi.Tools</AssemblyName>
+    <RootNamespace>WebApi.Tools</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
+    <PackageReference Include="morelinq" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +17,10 @@
 
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Crypto\" />
   </ItemGroup>
 
 </Project>
