--- a/Source/WebApi/WebApi.csproj
+++ b/Source/WebApi/WebApi.csproj
@@ -11,7 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.5" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="NLog" Version="4.5.10" />
@@ -19,7 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WebApi.EF\WebApi.EF.csproj" />
-    <ProjectReference Include="..\WebApi.Tagirator\WebApi.Tagirator.csproj" />
+    <ProjectReference Include="..\WebApi.Tools\WebApi.Tools.csproj" />
   </ItemGroup>
 
   <ItemGroup>
