--- a/Source/WebApi.Tools/WebApi.Tools.csproj
+++ b/Source/WebApi.Tools/WebApi.Tools.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="morelinq" Version="3.0.0" />
+    <PackageReference Include="RestSharp" Version="106.5.4" />
   </ItemGroup>
 
   <ItemGroup>
