--- a/Source/WebApi/nlog.config
+++ b/Source/WebApi/nlog.config
@@ -28,7 +28,7 @@
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile,console" />
+    <logger name="*" minlevel="Trace" writeTo="console" />
 
     <!--Skip non-critical Microsoft logs and so log only own logs-->
     <logger name="Microsoft.*" maxLevel="Info" final="true" />
